feat: add structure to the project

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,19 @@ body {
   color: $color-dark;
   scroll-behavior: smooth;
 }
+
+.wrapper {
+  max-width: 98%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: $base * 2;
+}
+
+.box-shadow {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+}
