--- a/src/components/filter/style.scss
+++ b/src/components/filter/style.scss
@@ -2,4 +2,10 @@
 
 .aside {
   padding: $base * 2;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 0px 0px;
+}
+
+.aside__header {
+  padding-bottom: $base * 5;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 0px 0px;
 }
