--- a/src/components/filter/style.scss
+++ b/src/components/filter/style.scss
@@ -1,11 +1,30 @@
 @import '../../styles/constants.scss';
 
-.aside {
+.filter {
   padding: $base * 2;
+}
+
+.filter__header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-bottom: $base * 2;
+  padding-bottom: $base * 2;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 0px 0px;
 }
 
-.aside__header {
-  padding-bottom: $base * 5;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 0px 0px;
+.input {
+  width: 100%;
+  padding-left: $base * 2;
+  border: none;
+  border-radius: $base;
+}
+
+.input-wrapper {
+  display: none;
+  gap: $base * 2;
+}
+
+.input-wrapper_active {
+  display: flex;
 }
