refactor: moved the indents to a separate file

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import './styles/constants.scss';
 @import './styles/normalize.scss';
 @import './styles/reset.scss';
+@import './styles/indents.scss';
 
 body {
   @include roboto;
