feat: add func for deleting tags from list

--- a/src/components/tag/style.scss
+++ b/src/components/tag/style.scss
@@ -2,6 +2,7 @@
 
 .tag-list__item {
   position: relative;
+  text-align: center;
   transition: background-color $transition-01 ease-out;
   cursor: pointer;
 
