--- a/src/components/filter/style.scss
+++ b/src/components/filter/style.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  column-gap: $base * 2;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 0px 0px;
 }
 
