--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,24 @@ body {
   scroll-behavior: smooth;
 }
 
-h2 {
-  font-size: $fs-xl;
+h1 {
+  font-size: $fs-xxxl;
   font-weight: $fw-bold;
+}
+
+h2 {
+  font-size: $fs-xxl;
+  font-weight: $fw-bold;
+}
+
+h3 {
+  font-size: $fs-xl;
+  font-weight: $fw-medium;
+}
+
+h4 {
+  font-size: $fs-l;
+  color: $color-dark-04;
 }
 
 .wrapper {
