--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -4,6 +4,29 @@
   font-family: 'Roboto', sans-serif;
 }
 
+@mixin scrollbar {
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #eee;
+    box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(90deg, $color-grey 0%, $color-grey-02 100%);
+    box-shadow: inset 0 0 1px 1px #5c6670;
+
+    &:hover {
+      background: linear-gradient(90deg, $color-grey-04 0%, $color-dark-04 100%);
+    }
+  }
+}
+
 // === / MIXIN ===
 
 // === FUNCTIONS ===
