--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 
 body {
   @include roboto;
+  @include scrollbar;
   background-color: $color-white;
   color: $color-dark;
   scroll-behavior: smooth;
