--- a/src/components/notesList/style.scss
+++ b/src/components/notesList/style.scss
@@ -11,4 +11,11 @@
   display: flex;
   flex-direction: column;
   row-gap: $base;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  line-break: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
