--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -12,7 +12,7 @@
 
   &::-webkit-scrollbar-track {
     border-radius: 10px;
-    background: #eee;
+    background: $color-white;
     box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0, 0, 0, 0.3);
   }
 
