--- a/src/styles/indents.scss
+++ b/src/styles/indents.scss
@@ -40,6 +40,10 @@
   margin-top: $base * 9;
 }
 
+.mr-auto {
+  margin-right: auto;
+}
+
 .mr-0 {
   margin-right: 0;
 }
@@ -118,6 +122,10 @@
 
 .mb-9 {
   margin-bottom: $base * 9;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .ml-0 {
