--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -99,6 +99,23 @@ $color-red-08: rgba(254, 0, 0, 0.8);
 $color-red-09: rgba(254, 0, 0, 0.9);
 $color-yellow: rgba(255, 235, 59, 1);
 $color-green: rgba(76, 175, 80, 1);
+$color-green-02: rgba(76, 175, 80, 0.2);
+$color-green-03: rgba(76, 175, 80, 0.3);
+$color-green-04: rgba(76, 175, 80, 0.4);
+$color-green-05: rgba(76, 175, 80, 0.5);
+$color-green-06: rgba(76, 175, 80, 0.6);
+$color-green-07: rgba(76, 175, 80, 0.7);
+$color-green-08: rgba(76, 175, 80, 0.8);
+$color-green-09: rgba(76, 175, 80, 0.9);
+$color-blue: rgba(33, 150, 243, 1);
+$color-blue-02: rgba(33, 150, 243, 0.2);
+$color-blue-03: rgba(33, 150, 243, 0.3);
+$color-blue-04: rgba(33, 150, 243, 0.4);
+$color-blue-05: rgba(33, 150, 243, 0.5);
+$color-blue-06: rgba(33, 150, 243, 0.6);
+$color-blue-07: rgba(33, 150, 243, 0.7);
+$color-blue-08: rgba(33, 150, 243, 0.8);
+$color-blue-09: rgba(33, 150, 243, 0.9);
 
 $breakpoint-xxs-min: 320px;
 $breakpoint-xs-min: 480px;
