--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -35,3 +35,15 @@
     font-size: $fs-m;
   }
 }
+
+.fw-regular {
+  font-weight: $fw-regular;
+}
+
+.fw-medium {
+  font-weight: $fw-medium;
+}
+
+.fw-bold {
+  font-weight: $fw-bold;
+}
