--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -1,5 +1,9 @@
 @import './constants.scss';
 
+.display_flex {
+  display: flex;
+}
+
 .ai-center {
   align-items: center;
 }
@@ -30,4 +34,32 @@
 
 .jc-between {
   justify-content: space-between;
+}
+
+.gap-1 {
+  gap: $base;
+}
+
+.gap-2 {
+  gap: $base * 2;
+}
+
+.gap-3 {
+  gap: $base * 3;
+}
+
+.gap-4 {
+  gap: $base * 4;
+}
+
+.gap-5 {
+  gap: $base * 5;
+}
+
+.gap-6 {
+  gap: $base * 6;
+}
+
+.gap-7 {
+  gap: $base * 7;
 }
