--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -36,6 +36,34 @@
   }
 }
 
+.fs-xs {
+  font-size: $fs-xs;
+}
+
+.fs-s {
+  font-size: $fs-s;
+}
+
+.fs-m {
+  font-size: $fs-m;
+}
+
+.fs-l {
+  font-size: $fs-l;
+}
+
+.fs-xl {
+  font-size: $fs-xl;
+}
+
+.fs-xxl {
+  font-size: $fs-xxl;
+}
+
+.fs-xxxl {
+  font-size: $fs-xxxl;
+}
+
 .fw-regular {
   font-weight: $fw-regular;
 }
